--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Odin Landing Page</title>
 </head>
 <body>
-    <div class="logo">Header Logo</div>
-    <nav>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-    </nav>
+    <header>
+        <div class="logo">Header Logo</div>
+        <nav>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </nav>
+    </header>
     <section class="hero">
         <div class="hero-left">
             <h1>This website is awesome</h1>
@@ -47,7 +49,7 @@
         </div>
     </section>
     <section class="quote">
-        <p>This is an inspiring quote, or testimonial from a customer.Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
     <p class="author">-Thor, God of Thunder</p>
     </section>
     <section class="cta">
